build: target Java 25
Bump the compiler release from 17/21 to 25 in pom.xml and switch every CI
workflow to temurin 25. Adds the OpenRewrite UpgradeToJava25 recipe and the
--add-opens/byte-buddy-experimental surefire argLine Mockito needs on 25,
then applies the resulting source modernizations and Spotless formatting.